# aws-mfa

./: .gitignore  LICENSE  README.md  aws-mfa.sh  requirements.txt  setup.cfg
aws_mfa/: main.py
src/aws_mfa/: main.py  version.py
