[metadata]
name = aws_mfa
version = file: aws_mfa/VERSION.txt
author = Nicholas Langellier
author_email = nlangellier at gmail dot com
description = AWS MFA handler
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nlangellier/aws-mfa
classifiers=
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Development Status :: 4 - Beta

[options]
package_dir =
    = aws_mfa
include_package_data = True
packages = find:
python_requires = >=3.10.0
install_requires =
    boto3 >= 1.21.0

[options.package_data]
* = *.txt

[options.packages.find]
where = aws_mfa

[options.entry_points]
console_scripts =
    hello-world = aws_mfa:main
