[metadata]
name = aws_mfa
version = file: src/aws_mfa/VERSION.txt
author = Nicholas Langellier
author_email = nlangellier at gmail dot com
description = AWS MFA handler
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nlangellier/aws-mfa
classifiers=
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Development Status :: 4 - Beta

[options]
package_dir =
    = src
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.10.0
install_requires =
    boto3 >= 1.21.0

[options.package_data]
* = *.txt, *.md, LICENSE

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    aws-mfa = aws_mfa:main
